feat:控制是否删除

--- a/src/main/resources/vms/iservice.java.vm
+++ b/src/main/resources/vms/iservice.java.vm
@@ -1,4 +1,4 @@
-package com.xy.data.servhandlerice.${templatesTable.uniqueName};
+package com.xy.data.service.${templatesTable.uniqueName};
 
 import com.baomidou.mybatisplus.extension.service.IService;
 import com.xy.data.entity.${templatesTable.uniqueName}.${templatesTable.entityName};
