--- a/src/main/resources/vms/application-dev.yml.vm
+++ b/src/main/resources/vms/application-dev.yml.vm
@@ -66,7 +66,7 @@ data:
     # 每次查询多少条
     limit: ${xy.migrations.count}
     # 是否删除
-    isDelete: true
+    isDelete: ${xy.migrations.isDel}
 
 swagger:
   enable: false
