fix:添加切面日志修复bug

--- a/src/main/resources/vms/application-dev.yml.vm
+++ b/src/main/resources/vms/application-dev.yml.vm
@@ -68,5 +68,9 @@ data:
     # 是否删除
     isDelete: ${xy.migrations.isDel}
 
+logging:
+  file:
+    name: D:/logs/wxw.log
+
 swagger:
   enable: false
