feat:更新模板代码

--- a/src/main/resources/vms/application-dev.yml.vm
+++ b/src/main/resources/vms/application-dev.yml.vm
@@ -1,3 +1,7 @@
+#foreach(${dataSources} in ${xy.migrationDataSources})
+  #set($primary=$dataSources.uniqueName)
+#end
+
 #set($maxActive=${xy.migrations.threadCount}*2)
 server:
   port: ${xy.migrations.port}
@@ -7,7 +11,7 @@ spring:
     # 配置数据源信息
     dynamic:
       # 设置默认的数据源或者数据源组,默认值即为master
-      primary: master
+      primary: ${primary}
       # 严格匹配数据源,默认false.true未匹配到指定数据源时抛异常,false使用默认数据源
       strict: false
       datasource:
